--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --mode=development --watch",
-    "build": "webpack --mode=production"
+    "start": "NODE_ENV=development webpack-dev-server --mode=development --watch",
+    "build": "NODE_ENV=production webpack --mode=production"
   },
   "dependencies": {
     "babel-loader": "^8.0.5",
