--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "NODE_ENV=production webpack --mode=production"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.16",
+    "@fortawesome/free-solid-svg-icons": "^5.8.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.5",
+    "date-fns": "^1.30.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "uuid": "^3.3.2"
